fix menu tile margin on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -43,7 +43,7 @@
     transition: 0.19s ease-in-out all;
 
     @media screen and (max-width: 450px) {
-        margin: 5.9vh auto;
+        margin: 5.5vh auto;
     }
 
     &:hover {
